# Personal-Learning-OS

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260711_0001_backend_foundation.py  20260711_0002_learning_spaces.py  20260711_0003_material_learning_flow.py  20260711_0004_concept_graph.py  20260711_0005_knowledge_state_reviews.py  20260712_0006_scheduler_calendar.py  20260712_0007_learning_paths.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: health.py
apps/backend/app/api/v1/: meta.py  router.py
apps/backend/app/common/: __init__.py  dependencies.py
apps/backend/app/core/: config.py  errors.py  logging.py  middleware.py  request_context.py
apps/backend/app/db/: __init__.py  health.py  models.py  seed.py  seed_demo.py  seed_learning_spaces.py  session.py
apps/backend/app/modules/: __init__.py
apps/backend/app/modules/concepts/: __init__.py  api.py  application.py  domain.py  infrastructure.py  schemas.py
apps/backend/app/modules/jobs/: __init__.py  models.py
apps/backend/app/modules/knowledge_state/: __init__.py  api.py  application.py  domain.py  infrastructure.py  schemas.py  scoring.py
apps/backend/app/modules/learning_paths/: __init__.py  api.py  application.py  (+4 more)
apps/backend/tests/: conftest.py  test_api.py  test_concepts.py  test_health.py  test_learning_path_domain.py  test_learning_spaces.py  test_material_flow.py  test_scheduler.py  test_scoring.py  test_seed.py
(+71 files in other folders)
